[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "src/day-1",
    "src/day-2",
    "src/day-3",
    "src/day-4",
    "src/day-5",
    "src/day-6",
    "src/day-7",
    "src/day-8",
    "src/day-9",
]
